--- a/app/views/pages/registration_sign_in.slim
+++ b/app/views/pages/registration_sign_in.slim
@@ -1,5 +1,20 @@
-.center-box-container
-  .center-box
+.row style="padding-top:100px;padding-bottom:100px;"
+  .col-sm-6 style="padding:0 65px; border-right:1px solid #cfcfcf;"
+    h2 Sign In
+    = form_for(resource, as: resource_name, url: session_path(resource_name)) do |f|
+      .form-group
+        = f.email_field :email, autocomplete: "email", class: "form-control"
+      .form-group
+        = f.password_field :password, autocomplete: "off", class: "form-control"
+      - if devise_mapping.rememberable?
+        .form-group
+          = f.check_box :remember_me, class: "rememberme"
+          = f.label :remember_me, class: "rememberme"
+      .form-group.form-actions
+        = f.submit "Log in"
+
+
+  .col-sm-6 style="padding:0 65px;"
     h2 Register
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
@@ -12,6 +27,3 @@
         = f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Password Confirmation', class: 'form-control'
       .form-group.form-actions
         = f.submit "Sign up"
-    = render "devise/shared/links"
-
-= stylesheet_link_tag "centerized"
