adds role to users

--- a/app/views/pages/index.slim
+++ b/app/views/pages/index.slim
@@ -1,1 +1,4 @@
-p hazzah I am a website
+p = "Welcome #{current_user.email}!" if current_user
+p Hazzah I am a Rails App!
+p General info about the app.
+
