--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -6,8 +6,7 @@ header
     #navbarNavAltMarkup.collapse.navbar-collapse
       .navbar-nav
         a.nav-item.nav-link.active href="/" Home
-        a.nav-item.nav-link href="/" Articles
-        a.nav-item.nav-link href="/" Categories
+        a.nav-item.nav-link href=articles_path Articles
         - if current_user
           a.nav-item.nav-link.sign-in href=destroy_user_session_path data-method="delete" Sign Out
         - else
