--- a/app/views/admin/users/index.slim
+++ b/app/views/admin/users/index.slim
@@ -17,6 +17,6 @@
             td = user.email
             td = user.role
             td
-              .btn-group
+              .btn-group.pull-right
                 a.pull-left href=edit_admin_user_path(user) Edit
                 a.pull-left href=admin_user_path(user) data-method="delete" Delete
