--- a/app/views/admin/users/index.slim
+++ b/app/views/admin/users/index.slim
@@ -19,4 +19,4 @@
             td
               .btn-group.pull-right
                 a.pull-left href=edit_admin_user_path(user) Edit
-                a.pull-left href=admin_user_path(user) data-method="delete" Delete
+                //a.pull-left href=admin_user_path(user) data-method="delete" Delete
